   e.g. IrcClient { server("irc.example.com", 6667) }
 * Add behaviour options
   * requestModesOnJoin - automatically sends a MODE request when joining a channel
 * Events now have a `metadata` property instead of a `time` (and time is available in metadata)
   * IrcEvent.time is now deprecated but will remain until after v1.0.0.
   * Metadata now contains the event's batch ID, if any.
 * Added support for batches
   * All events in a batch are buffered until the batch is finished
   * The events are then published together in a single `BatchReceived` event
 * (Internal) Introduced event mutators
   * Event mutators are now responsible for handling changing events in response to state
     e.g. ChannelFanOutMutator creates Channel* events for global quits/nick changes/etc
   * Event handlers now just handle events, and don't return anything

v0.8.0

 * Added support for SCRAM-SHA-1 and SCRAM-SHA-256 SASL mechanisms
 * Added MotdLineReceived event
 * Added topic events and state
 * Add utility method IrcClient.isChannel(String) to identify if a target is a channel or not
 * (Internal) Move event handlers into their own package

v0.7.0

 * Fixed experimental API warnings when using IrcClient
 * IrcClients are now constructed using a DSL
   * Users of the library no longer need to care about the implementing class
   * Facilitates adding more options in the future without breaking existing implementations
 * SASL improvements
   * The enabled mechanisms can now be configured (in the SASL DSL)
   * Added support for EXTERNAL mechanism, disabled by default
   * Now attempts to renegotiate if the server doesn't recognise the SASL mechanism that was tried
 * Added UserNickChanged and corresponding ChannelNickChanged events
 * Added ServerConnectionError, raised when connecting to the server fails
 * (Internal) Minor version updates for Gradle, Kotlin and JUnit

v0.6.0

 * Changed USER command to not send the server name, per modern standards